<resources>
    <string name="app_name">Zero</string>
    <string name="app_homePhrase">Stay Alert, Stay Safe</string>
    <string name="email_field">Email Address</string>
    <string name="password_field">Password</string>
    <string name="button_login">Log In</string>
    <string name="button_signup">Create Account</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="button_toLogin">Have An Account</string>
    <string name="button_toSignup">Create An Account</string>
    <string name="button_toSignout">Sign Out</string>
    <string name="main_create_alert">Create An Alert</string>
    <string name="alert_name_field">Content</string>
    <string name="alert_category_field">Category</string>
    <string name="alert_location_field">Location</string>
    <string name="alert_create_button">Create Alert</string>
    <string name="alert_back_button">Back</string>
    <string name="alert_view_header">ALERT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="make_comment">Comment</string>
    <string name="button_viewAlert_confirm">Confirm</string>
    <string name="alert_confirm_view">No Confirm</string>
    <string name="alert_check">Show Alerts</string>
    <string name="feed_check">Show Feeds</string>
    <string name="action_create_alert">Create an Alert</string>
    <string name="button_comment_alert">Comment</string>
    <string name="comment_hint">Your comment...</string>
    <string name="comment_post_button">Post</string>
</resources>

