<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:textSize="32sp"
        android:textColor="#ff0000"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_view_header" />

    <TextView
        android:id="@+id/alertViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Alert Title"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/alertViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:text="Alert Category" />

    <TextView
        android:id="@+id/alertViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:text="Alert Location"
        android:textSize="20sp" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/confirm_number_view"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:text="@string/alert_confirm_view"
            android:textAlignment="gravity"
            />
        <Button
            android:id="@+id/viewAlert_confirm_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/button_viewAlert_confirm"
            android:onClick="confirmAlert"
            />
    </LinearLayout>


</LinearLayout>